# espidf_wifi_ble_gatt_coexist

./: .gitignore  sdkconfig  sdkconfig.old
components/MCP/: CMakeLists.txt_  Kconfig.projbuild  MCP.c  README.md  aspep.c  motor_control_protocol.c
components/MCP/include/: aspep.h  motor_control_protocol.h  unity.h
components/MCP/test/: test_aspep.c  test_motor_control_protocol.c
components/data_format/: CMakeLists.txt  pump_data.c  pump_data.h
components/my_ble/: my_ble.c  my_ble.h
components/my_ble_wifi_coex/: CMakeLists.txt  Kconfig.projbuild  bleprph.c  bleprph.h  gatt_svr.c  gatt_svr.h  networkInterface.c  networkInterface.h
components/my_http/: CMakeLists.txt  my_http.c  my_http.h
components/my_mqtt/: CMakeLists.txt  my_mqtt.c  my_mqtt.h
components/my_wifi/: CMakeLists.txt  my_wifi.c  my_wifi.h
main/: CMakeLists.txt  cmd_wifi.c  main.c  wifi_conf.h
